# SPDX-FileCopyrightText: 2023 Ledger SAS
# SPDX-License-Identifier: Apache-2.0

#subdir('arch')
#subdir('framebuffer')
#subdir('platform')


# Inconditionally build source files
#enclave_source_set.add(files(
#    'clock.c',
#    'entrypoint.c',
#    'handlers.c',
#    'mu_client.c',
#    'perfo.c',
#    'startup.S',
#    'utils.c',
#    'workqueue.c',
#))

#enclave_source_set.add(when: 'CONFIG_ENABLE_SECUREELEMENT_COMMUNCATION', if_true: files('secureelem.c'))

#enclave_inc += [include_directories('.')]

#enclave_linker_script = files('m7fw.ld')
#enclave_linker_args = [
#    '-T@0@'.format(fs.name(enclave_linker_script[0])),
#    '-L@0@'.format(meson.current_source_dir()),
#]
