[package]
name = "uapi"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
systypes = { path = "../include/uapi/types" }
bitflags = { version = "2.4.0" }

[dev-dependencies]
sysgate = { path = "../src/syscalls", features = ['mock'] }
uapi = { path = '.', features = ['std'] }

[features]
default = []
std = []
