# SPDX-FileCopyrightText: 2023 Ledger SAS
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sentry-uapi"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
description = "Sentry kernel user API implementation"
categories = ["os::api"]

[dependencies]

[dev-dependencies]
sentry-uapi = { path = '.', features = ['std'] }

[features]
default = []
std = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(CONFIG_BUILD_TARGET_AUTOTEST)'] }
