# SPDX-FileCopyrightText: 2023 Ledger SAS
# SPDX-License-Identifier: Apache-2.0

subdir('arch')

autotest_sources = files(
  'main.c',
  'printf.c',
  'ssp.c',
  'tests/test_ipc.c',
  'tests/test_signal.c',
  'tests/test_handle.c',
  'tests/test_sleep.c',
  'tests/test_cycles.c',
  'tests/test_yield.c',
  'tests/test_random.c',
  'tests/test_gpio.c',
  '../../kernel/src/managers/debug/log_lexer.c',
)
