# SPDX-FileCopyrightText: 2023 Ledger SAS
# SPDX-License-Identifier: Apache-2.0

subdir('arch')

# list of statically defined headers: generic kernel headers
sentry_header_set.add(files(
  'bits.h',
  'device.h',
  'dma.h',
  'io.h',
  'ipc.h',
  'ktypes.h',
  'mm.h',
  'signal.h',
  'task.h',
  'thread.h',
))

# managers headers
sentry_header_set.add(files(
  'managers/io.h',
))
